
Version 3.2
-----------------------------
03/23/09: beazley
          Added a new picklefile option to yacc() to write the parsing
          tables to a filename using the pickle module.   Here is how
          it works:

              yacc(picklefile="parsetab.p")

          This option can be used if the normal parsetab.py file is
          extremely large.  For example, on jython, it is impossible
          to read parsing tables if the parsetab.py exceeds a certain
          threshold.

          The filename supplied to the picklefile option is opened
          relative to the current working directory of the Python 
          interpreter.  If you need to refer to the file elsewhere,
          you will need to supply an absolute or relative path.

          For maximum portability, the pickle file is written
          using protocol 0. 
 
03/13/09: beazley
          Fixed a bug in parser.out generation where the rule numbers
          where off by one.

03/13/09: beazley
          Fixed a string formatting bug with one of the error messages.
          Reported by Richard Reitmeyer

Version 3.1
-----------------------------
02/28/09: beazley
          Fixed broken start argument to yacc().  PLY-3.0 broke this
          feature by accident.

02/28/09: beazley
          Fixed debugging output. yacc() no longer reports shift/reduce
          or reduce/reduce conflicts if debugging is turned off.  This
          restores similar behavior in PLY-2.5.   Reported by Andrew Waters.

Version 3.0
-----------------------------
02/03/09: beazley
          Fixed missing lexer attribute on certain tokens when
          invoking the parser p_error() function.  Reported by 
          Bart Whiteley.

02/02/09: beazley
          The lex() command now does all error-reporting and diagonistics
          using the logging module interface.   Pass in a Logger object
          using the errorlog parameter to specify a different logger.

02/02/09: beazley